--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">OtizmleYasam</string>
+    <string name="app_name">OtizmleYaşam</string>
     <string name="strMainTitle">OTİZM İLE YAŞAM</string>
     <string name="strSecondTitle">Farkındayım farkında olun!</string>
     <string name="strStartButtonText">HAYDİBAŞLAYALIM !</string>
